# rf-detr-pytorch-sagemaker-demo-private

./: .flake8  .gitignore  Makefile  README.md  config.py  deploy_rf_detr_local.ipynb  deploy_rf_detr_local_mac.ipynb  deploy_rf_detr_sagemaker_studio.ipynb  docker-compose.yml  image_analysis.txt  jupyter_env.py  object_detection_image.py  pyproject.toml  requirements-deploy.txt  requirements-local-inference.txt  requirements.txt  voiceover_script.txt
code/: inference.py  requirements.txt
docker/: Dockerfile.dev
docs/: MODEL_INFO.md  OPTIMIZATION_SUMMARY.md
local_inference/: extract_grid_frame.py  index_of_versions.txt  object_detection_image.py  object_detection_video.py  object_detection_video_v2.py  requirements-local-inference.txt
locust_scripts/: README.md  locust_rfdetr.conf  locust_rfdetr.py  plotly_chart_instances.py  plotly_chart_small_large.py  plotly_table_instances.py
scripts/: setup_env.sh
tests/: test_config.py
utils/: image_utils.py  logging_utils.py
